# rust-smallvec

./: .gitignore  .travis.yml  Cargo.toml  README.md  lib.rs
.github/workflows/: main.yml
benches/: bench.rs
fuzz/: Cargo.toml  README.md  travis-fuzz.sh
fuzz/fuzz_targets/: smallvec_ops.rs
scripts/: run_miri.sh  test-all.sh  test-common.sh  test-nightly.sh  test-stable.sh
src/: abomonation.rs  array.rs  drain.rs  extend_from_slice.rs  heap.rs  into_iter.rs  lib.rs  macros.rs  repr.rs  set_len_on_drop.rs  small_vec.rs  small_vec_data.rs  small_vec_index_impls.rs  small_vec_visitor.rs  spec_from.rs  tagged_union.rs  tests.rs  utils.rs
testing/: Cargo.toml
testing/src/: lib.rs
tests/: macro.rs  splice.rs
