[package]
name = "smallvec"
version = "1.5.1"
edition = "2018"
authors = ["The Servo Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/rust-smallvec"
description = "'Small vector' optimization: store up to a small number of items on the stack"
keywords = ["small", "vec", "vector", "stack", "no_std"]
categories = ["data-structures"]
readme = "README.md"
documentation = "https://docs.rs/smallvec/"

[features]
const_generics = []
write = []
union = []
specialization = []
may_dangle = []

[dependencies]
serde = { version = "1", optional = true, default-features = false }

[dev_dependencies]
bincode = "1.0.1"
