[package]
name = "smallvec"
version = "2.0.0-alpha.2"
edition = "2018"
rust-version = "1.57"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/rust-smallvec"
description = "'Small vector' optimization: store up to a small number of items on the stack"
keywords = ["small", "vec", "vector", "stack", "no_std"]
categories = ["data-structures"]
readme = "README.md"
documentation = "https://docs.rs/smallvec/"

[features]
write = []
specialization = []
may_dangle = []
drain_filter = []
drain_keep_rest = ["drain_filter"]

[dependencies]
serde = { version = "1", optional = true, default-features = false }

[dev_dependencies]
bincode = "1.0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
